--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -77,65 +77,30 @@ p {
 }
 
 .card {
-  border-radius: 4px;
-  border: 1px solid #eee;
-  background-color: #fafafa;
-  height: 150px;
-  width: 200px;
-  margin: 0 8px 16px;
-  padding: 1px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.2s ease-in-out;
-  line-height: 24px;
-  order: 1;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: auto;
-  align-self: flex-start;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  margin: 5px;
+  border-radius: 10px;
 }
 
-.card-container .card:not(:last-child) {
-  margin-right: 0;
-}
-
-.card.card-small {
-  height: 16px;
-  width: 168px;
+.card img {
+  border-radius: 10px;
 }
 
 .card.card-large {
-  height: 20rem;
-  width: 35rem;
+  width: 100%;
+  padding: 10px;
 }
 
-.card-container .card:not(.highlight-card) {
-  cursor: pointer;
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.card-container .card:not(.highlight-card):hover {
-  transform: translateY(-3px);
-  box-shadow: 0 4px 17px rgba(black, 0.35);
-}
-
-.card-container .card:not(.highlight-card):hover .material-icons path {
-  fill: rgb(105, 103, 103);
-}
-
-.card.highlight-card {
-  background-color: #1abc9c;
-  color: #333333;
-  font-weight: 600;
-  border: none;
-  width: auto;
-  min-width: 30%;
-  position: relative;
-}
-
-.card.card.highlight-card span {
-  margin-left: 60px;
+.card-container {
+  padding: 2px 16px;
+  text-align: center;
+  font-size: 15px;
 }
 
 a,
