--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- Toolbar -->
+<ngx-spinner></ngx-spinner>
 <div class="toolbar" role="banner">
   <span>Wesura</span>
     <div class="spacer"></div>
